# SyntMTE

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/conditions/inference/: example_inference.csv
data/conditions/random_split/: normalization.json  test.csv  train.csv  val.csv
data/conditions/year_split/: test.csv  train.csv  val.csv
figures/: case_study_plot.py
src/: crabnet.py  dataset.py  embedd_materials.py  main.py  mtencoder.py  trainer.py  utils.py  wrap_crabnet.py  wrap_mtencoder.py  xgboost_.py
src/models/: composition_mlp.py
